# ProtoBot2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE
.github/workflows/: check.yml  release.yml
protobot_sender/: Cargo.toml
protobot_sender/src/: main.rs
protobot_wrapper/: Cargo.toml
protobot_wrapper/src/: main.rs
src/: application.rs  config.rs  discord_bot.rs  main.rs  ptero_perms_sync.rs  smp_commands.rs  stdin.rs  webserver.rs
src/discord_bot/: brainfuck.rs  chess.rs  commands.rs  counter.rs  guild_storage.rs  js_messages.rs  mod.rs  mood.rs  octal_counter.rs  permanent_latest.rs  reaction_role_toggle.rs  role.rs  roletoggle.rs  simple_words.rs  simple_writer_words.txt  social_credit.rs  storage.rs  support.rs  top_10k_words.txt  update_copy.rs  welcome_message.rs
src/discord_bot/april_fools_channel/: exact_message_length.rs  haiku.rs  mod.rs  simple_words.rs
src/pterodactyl/: mod.rs  perms_sync.rs  smp_commands.rs  whitelist.rs
