[package]
name = "protobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
base64 = "0.13.0"
chrono = "0.4.20"
dashmap = "5.3.4"
flexi_logger = { version = "0.23.0", default_features = false, features = ["compress"] }
futures = "0.3.21"
git-version = "0.3.5"
hyper = { version = "0.14.19", features = ["http1", "http2", "server", "stream", "tcp"] }
lazy_static = "1.4.0"
linkify = "0.9.0"
log = "0.4.17"
log-panics = "2.0.0"
nom = "7.1.1"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json"] }
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
scraper = "0.13.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serenity = { version = "0.11.5", default_features = false, features = ["cache", "client", "gateway", "rustls_backend", "model"] }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["fs", "macros", "rt-multi-thread", "time"] }
tokio-rustls = "0.23.4"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
tokio-util = { version = "0.7.3", features = ["io"] }
urlencoding = "2.1.0"
