[package]
name = "protobot"
version = "0.1.0"
edition = "2021"

[dependencies]
arpabet = "2.0.0"
async-trait = "0.1"
async-tungstenite = { version = "0.28", features = ["tokio-runtime", "tokio-native-tls"] }
chrono = "0.4"
ctrlc = "3.5"
dashmap = "6.1"
flexi_logger = { version = "0.31", default-features = false, features = ["compress"] }
futures = "0.3"
git-version = "0.3"
http-body-util = "0.1"
hyper = { version = "1.5", features = ["http1", "server"] }
hyper-util = "0.1"
linkify = "0.10"
log = "0.4"
log-panics = "2.1"
nom = "8.0"
pterodactyl_api = { version = "0.2", features = ["websocket"] }
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model"] }
thiserror = "2.0"
tokio = { version = "1.41", features = ["fs", "io-std", "macros", "rt-multi-thread", "time"] }
urlencoding = "2.1"
uuid = { version = "1.11", features = ["serde"] }
